:bug: sidebar: changed section-tree-nav template name in default.html (#53)
In `sidebar.html` we used `section-tree-nav` template which is overlapping with the one in the default.html and this is causing the issue #49. So i changed the template name in `default.html`.

Fixes #49.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -911,7 +911,7 @@ tbody {
 }
 
 li.sidelist>a {
-    margin-left: 20px;
+    margin-left: 35px;
     margin-bottom: 10px;
     display: block;
     font-size: 20px;
